tests/baselines/reference/parserErrorRecovery_ParameterList5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList5.ts (2 errors) ====
    (a:number => { }
              ~~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1005: ')' expected.